--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -1,7 +1,8 @@
 {
     "@@locale": "en",
-    "counterAppBarTitle": "Counter",
-    "@counterAppBarTitle": {
-        "description": "Text shown in the AppBar of the Counter Page"
-    }
+    "overview": "Overview",
+    "logout": "Logout",
+    "accounts": "Accounts",
+    "addAccount": "Add account",
+    "charts": "Charts"
 }
