Add account & account type

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -4,5 +4,30 @@
     "logout": "Logout",
     "accounts": "Accounts",
     "addAccount": "Add account",
-    "charts": "Charts"
+    "charts": "Charts",
+    "accountTypeAppBarTitle": "Type",
+    "accountAppBarTitle": "List",
+    "accountTypeErrorSnackbarText": "An error occurred while loading account types.",
+    "editAccountTypeMaxAccountTypeSnackBar": "You have reached the maximum number of account types. For more options, use our web app at",
+    "accountTypeDeletedSnackbarText": "Account Type \"{accountType}\" deleted.",
+    "accountTypeUndoDeletionButtonText": "Undo",
+    "accountTypeEmptyText": "No account type found",
+    "editAccountTypeAddAppBarTitle": "Add Account Type",
+    "editAccountTypeEditAppBarTitle": "Edit Account Type",
+    "editAccountTypeSaveButtonTooltip": "Save changes",
+    "editAccountTypeTypeLabel": "Type",
+    "contributionsTabTitle":"Contributions",
+    "positionsTabTitle":"Positions",
+    "accountErrorSnackbarText": "An error occurred while loading accounts.",
+    "accountDeletedSnackbarText": "Account \"{account}\" deleted.",
+    "accountUndoDeletionButtonText": "Undo",
+    "accountEmptyText": "No account found",
+    "editAccountMaxAccountSnackBar": "You have reached the maximum number of accounts. For more options, use our web app at",
+    "editAccountAddAppBarTitle": "Add Account",
+    "editAccountEditAppBarTitle": "Edit Account",
+    "editAccountSaveButtonTooltip": "Save changes",
+    "editAccountNameLabel": "Name",
+    "editAccountTypeLabel": "Type",
+    "editAccountDescriptionLabel": "Description",
+    "editAccountMissingType": "Please select a type"
 }
