--- a/lib/l10n/arb/app_fr.arb
+++ b/lib/l10n/arb/app_fr.arb
@@ -4,5 +4,30 @@
     "logout": "Déconnexion",
     "accounts": "Comptes",
     "addAccount": "Ajouter un compte",
-    "charts": "Graphiques"
+    "charts": "Graphiques",
+    "accountTypeAppBarTitle": "Type",
+    "accountAppBarTitle": "Liste",
+    "accountTypeErrorSnackbarText": "Une erreur est survenu lors du chargement des types de compte.",
+    "editAccountTypeMaxAccountTypeSnackBar": "Vous avez atteint le nombre maximum de types de comptes. Pour plus d'options, utilisez notre app à",
+    "accountTypeDeletedSnackbarText": "Le type de compte \"{accountType}\" à été supprimé.",
+    "accountTypeUndoDeletionButtonText": "Annuler",
+    "accountTypeEmptyText": "Aucun type de compte trouvé",
+    "editAccountTypeAddAppBarTitle": "Ajout type de compte",
+    "editAccountTypeEditAppBarTitle": "Modification type de compte",
+    "editAccountTypeSaveButtonTooltip": "Sauvegarder",
+    "editAccountTypeTypeLabel": "Type",
+    "contributionsTabTitle":"Cotisations",
+    "positionsTabTitle":"Positions",
+    "accountErrorSnackbarText": "Une erreur est survenu lors du chargement des comptes.",
+    "accountDeletedSnackbarText": "Le compte \"{account}\" à été supprimé.",
+    "accountUndoDeletionButtonText": "Annuler",
+    "accountEmptyText": "Aucun compte trouvé",
+    "editAccountMaxAccountSnackBar": "Vous avez atteint le nombre maximum comptes. Pour plus d'options, utilisez notre app à",
+    "editAccountAddAppBarTitle": "Ajout de compte",
+    "editAccountEditAppBarTitle": "Modification de compte",
+    "editAccountSaveButtonTooltip": "Sauvegarder",
+    "editAccountNameLabel": "Nom",
+    "editAccountTypeLabel": "Type",
+    "editAccountMissingType": "Veuillez sélectionner un type",
+    "editAccountDescriptionLabel": "Description"
 }
