Calculate CB and Show stock price

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -36,5 +36,6 @@
     "editPositionSaveButtonTooltip": "Save changes",
     "editPositionTickerLabel": "Ticker",
     "editPositionQtyOfSharesLabel": "Qty. Of Shares",
-    "positionErrorSnackbarText": "An error occurred while loading positions."
+    "positionErrorSnackbarText": "An error occurred while loading positions.",
+    "editPositionCostLabel": "Cost"
 }
