--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -30,14 +30,14 @@
     "editAccountTypeLabel": "Type",
     "editAccountDescriptionLabel": "Description",
     "editAccountMissingType": "Please select a type",
-    "editPositionMaxPositionSnackBar": "You have reached the maximum number of positions. For more options, use our web app at",
-    "editPositionAddAppBarTitle": "Add Position",
-    "editPositionEditAppBarTitle": "Edit Position",
-    "editPositionSaveButtonTooltip": "Save changes",
-    "editPositionTickerLabel": "Ticker",
-    "editPositionQtyOfSharesLabel": "Qty. Of Shares",
+    "addPositionMaxPositionSnackBar": "You have reached the maximum number of positions. For more options, use our web app at",
+    "addPositionAddAppBarTitle": "Add Position",
+    "addPositionEditAppBarTitle": "Edit Position",
+    "addPositionSaveButtonTooltip": "Save changes",
+    "addPositionTickerLabel": "Ticker",
+    "addPositionQtyOfSharesLabel": "Qty. Of Shares",
     "positionErrorSnackbarText": "An error occurred while loading positions.",
-    "editPositionCostLabel": "Cost",
+    "addPositionCostLabel": "Cost",
     "positionDeletedSnackbarText": "Position \"{position}\" deleted.",
     "positionUndoDeletionButtonText": "Undo",
     "positionErrorSnackbarText": "An error occurred while loading positions.",
