--- a/lib/l10n/arb/app_fr.arb
+++ b/lib/l10n/arb/app_fr.arb
@@ -30,14 +30,14 @@
     "editAccountTypeLabel": "Type",
     "editAccountMissingType": "Veuillez sélectionner un type",
     "editAccountDescriptionLabel": "Description",
-    "editPositionMaxPositionSnackBar": "Vous avez atteint le nombre maximum positions. Pour plus d'options, utilisez notre app à",
-    "editPositionAddAppBarTitle": "Ajout de position",
-    "editPositionEditAppBarTitle": "Modification de position",
-    "editPositionSaveButtonTooltip": "Sauvegarder",
-    "editPositionTickerLabel": "Cote",
-    "editPositionQtyOfSharesLabel": "Qté. d'actions",
+    "addPositionMaxPositionSnackBar": "Vous avez atteint le nombre maximum positions. Pour plus d'options, utilisez notre app à",
+    "addPositionAddAppBarTitle": "Ajout de position",
+    "addPositionEditAppBarTitle": "Modification de position",
+    "addPositionSaveButtonTooltip": "Sauvegarder",
+    "addPositionTickerLabel": "Cote",
+    "addPositionQtyOfSharesLabel": "Qté. d'actions",
     "positionErrorSnackbarText": "Une erreur est survenu lors du chargement des positions.",
-    "editPositionCostLabel": "Coût",
+    "addPositionCostLabel": "Coût",
     "positionDeletedSnackbarText": "La position \"{position}\" à été supprimé.",
     "positionUndoDeletionButtonText": "Annuler",
     "positionErrorSnackbarText": "Une erreur est survenu lors du chargement des positions.",
