--- a/lib/l10n/arb/app_fr.arb
+++ b/lib/l10n/arb/app_fr.arb
@@ -44,5 +44,8 @@
     "positionEmptyText": "Aucune position trouvée",
     "accountsAppBarTitle": "Comptes",
     "cancel": "Annuler",
-    "ok": "Ok"
+    "ok": "Ok",
+    "transactions": "Transactions",
+    "positions": "Positions",
+    "currency": "Devise"
 }
